[BE][Task] Detail effort when hover (#100)
* [BE][Task] Detail effort when hover

* delete ! in let()

* Refactor code, delete not used scope, add description to params in spec
